--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>assignment-1</title>
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body class="font-open-sans">
     <header>
-        <nav>
-            <a href="Features">Features</a>
-            <a href="Features">How It Works</a>
-            <a href="Features">Why It's Different</a>
-            <div>
-                <img src="assets/logo-navbar.png" alt="">
-            </div>
-        </nav>
-        <button>get Early access</button>
-    </header>
-    <section>
-        <h2>Structured thinking,not just note-taking.</h2>
-            <p>A private space to store notes, links, and learning summaries — designed to
-            help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
-            <button>Start Building Your Vault</button>
-            <button>See How It Works</button>
-    </section>
-</body>
+  <div class="container">
+
+    <div class="logo">
+      <img src="assets/logo-navbar.png" alt="KV Logo">
+    </div>
+    <nav>
+      <a href="#">Features</a>
+      <a href="#">How It Works</a>
+      <a href="#">Why It's Different</a>
+    </nav>
+    <button>Get Early Access</button>
+
+  </div>
+</header>
+
+  </body>
 </html>
